2009-03-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Implement Do not disturb flag.

	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h (HD_ATOM_HILDON_DO_NOT_DISTURB,
	  HD_ATOM_HILDON_DO_NOT_DISTURB_OVERRIDE): Add new atoms for do not
	  disturb flags.

	* src/mb/hd-comp-mgr.c (stack_sync, do_not_disturb_flag,
	  portrait_requested, hd_comp_mgr_client_property_changed,
	  hd_comp_mgr_map_notify, hd_comp_mgr_restack,
	  hd_comp_mgr_should_be_portrait,
	  hd_comp_mgr_check_do_not_disturb_flag): Check for changes of do not
	  disturb flag on restacking and property change event. Check for do
	  not disturb on mapping of incoming event previews and information
	  banners.

	* tests/Makefile.am:
	* tests/test-do-not-disturb.c (added): Add do not disturb test window.

2009-03-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Coverity found issues:
	* src/mb/hd-decor.c (hd_decor_create_actors): Don't use 'client'
	before its NULL check.
	(hd_decor_create_actors): Remove dead code, check for title==NULL when
	it cannot be.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Add check for
	possible NULL deref with priv->home==NULL.
	* src/mb/hd-theme.c (construct_buttons): Avoid NULL dereference.
	* src/mb/hd-wm.c (hd_wm_client_responding): Remove unused 'banner'.

	* src/home/hd-home.c (root_window_client_message): Plug a memory leak
	by using break instead of return in the switch.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unmap_notify): Remove transiency
	from a stackable secondary before libmatchbox2 starts to unmap them.
	Also, fix the transiency of the window above if any. Fixes: NB#103836

2009-03-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-notification.c: deleted, never used
	* src/home/hd-notification.h: deleted
	* src/home/Makefile.am
	* data/qgn_home_close.png: deleted, tasw doesn't need it anymore
	* data/Makefile.am
	* TODO

2009-03-27  Gordon Williams <gordon.williams@collabora.co.uk>

        * tests/test-launcher.c (removed)